<resources>
    <string name="app_name">ACNH Wiki</string>
    <string name="gender">성별</string>
    <string name="birthday">생일</string>
    <string name="personality">성격</string>
    <string name="phrase">말버릇</string>
    <string name="favorites">좋아하는 것</string>
    <string name="hobby">취미</string>
    <string name="styles">스타일</string>
    <string name="music">노래</string>
    <string name="colors">색상</string>
    <string name="recommend_present">선물 추천받기</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="tops">상의</string>
    <string name="onepieces">한 벌 옷</string>
    <string name="headwears">모자</string>
    <string name="accessories">액세서리</string>
    <string name="musics">음악</string>
    <string name="gift_this_item">이 아이템 선물하기</string>
    <string name="show_furniture_list">가구 리스트 보기 👆</string>
    <string name="cannot_see_other_gifts">주려는 선물이 보이지 않아요</string>
    <string name="recommend_gift">선물 추천</string>
    <string name="how_much_like_my_gift">내 선물,\n 과연 주민이 얼마나 좋아할까요?</string>
    <string name="select">선택</string>
    <string name="pick_gift_for_villager">주민에게 줄 선물을 골라주세요!</string>
    <string name="this_item_is">이 아이템은…</string>
    <string name="having_furniture">가구리스트</string>
</resources>
